# ros_plugin_tutorial

./: readme.md
01_simple_plugin/: readme.md
01_simple_plugin/src/a_simple_plugin_example/: CMakeLists.txt  package.xml  plugin_triangle.xml  readme.md
01_simple_plugin/src/a_simple_plugin_example/include/a_simple_plugin_example/: plugin_base_class.h  plugin_triangle.h
01_simple_plugin/src/a_simple_plugin_example/src/: plugin_base_class.cpp  plugin_triangle.cpp
01_simple_plugin/src/b_load_plugin/: CMakeLists.txt  package.xml  readme.md
01_simple_plugin/src/b_load_plugin/src/: b_load_plugin_node.cpp
01_simple_plugin/src/c_create_plugin/: CMakeLists.txt  package.xml  plugin_rectangle.xml  readme.md
01_simple_plugin/src/c_create_plugin/include/c_create_plugin/: plugin_rectangle.h
01_simple_plugin/src/c_create_plugin/src/: plugin_rectangle.cpp
01_simple_plugin/src/d_load_plugin/: CMakeLists.txt  package.xml
01_simple_plugin/src/d_load_plugin/src/: d_load_plugin_node.cpp
docker/: build_image.bat  build_image.sh  container-start.bash  container-start.bat
