<?xml version="1.0"?>
<package format="2">
"  " <name>a_simple_plugin_example</name>
"  " <version>0.0.0</version>
"  " <description>The a_simple_plugin_example package</description>
"  " <maintainer email="Administrator@todo.todo">Administrator</maintainer>
"  " <license>TODO</license>
"  " <buildtool_depend>catkin</buildtool_depend>
"  " <build_depend>pluginlib</build_depend>
"  " <build_depend>roscpp</build_depend>
"  " <build_export_depend>pluginlib</build_export_depend>
"  " <build_export_depend>roscpp</build_export_depend>
"  " <exec_depend>pluginlib</exec_depend>
"  " <exec_depend>roscpp</exec_depend>
"  " <export>
"  " "  " <a_simple_plugin_example plugin="${prefix}/plugin_triangle.xml"/>
"  " </export>
</package>
