<?xml version="1.0"?>
<package format="2">
  <name>d_load_plugin</name>
  <version>0.0.0</version>
  <description>The d_load_plugin package</description>

  <maintainer email="Administrator@todo.todo">Administrator</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>a_simple_plugin_example</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_export_depend>a_simple_plugin_example</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>a_simple_plugin_example</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
